--- a/1250.css
+++ b/1250.css
@@ -141,7 +141,7 @@ nav ul li a {
 }
 
 .box {
-    background-color: #0C3C60;
+    background-color: #D1E0EB;
     padding: 40px;
     color: #fff;
     text-align: center;
@@ -166,11 +166,13 @@ nav ul li a {
 }
 
 .box button {
-    background-color: #6EA4CA;
+    background-color: #cad5dd;
     border: none;
     padding: 8px 30px;
     color: #fff;
     font-size: 1.25em;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 /* end: marketing boxes styles */
 
@@ -183,14 +185,20 @@ nav ul li a {
 }
 
 .about-us h1 {
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
-
+.about-us h3 {
+    margin-bottom: 50px;
+    text-align:center;
+    
+}
 .about-us p {
     max-width: 640px;
-    font-size: 0.85em;
-    margin: 0 auto 100px;
+    font-size: 1em;
+    margin: 0 auto 10px;
     line-height: 1.5em;
+    text-align: justify;
+    text-align: left;
 }
 
 .about-us button {
@@ -200,8 +208,146 @@ nav ul li a {
     font-size: 1em;
     padding: 8px 30px;
 }
-/* end: about us styles */
+.about-us1 {
+    background-color: #D1E0EB;
+    color: #0C3C60;
+    text-align: center;
+    padding: 10px 10px 0px;
+    margin-top: 20px;
+}
+/*  
+.about-us1 h1 {
+    margin-bottom: 0px;
+}
+.about-us1 h3 {
+    margin-bottom: 50px;
+    text-align:center;
+    
+}
+.about-us1 p {
+    max-width: 640px;
+    font-size: 1em;
+    margin: 0 auto 10px;
+    line-height: 1.5em;
+    text-align: justify;
+    text-align: left;
+}
 
+.about-us1 button {
+    background-color: #0C3C60;
+    color: #fff;
+    border: none;
+    font-size: 1em;
+    padding: 8px 30px;
+}*/
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 70%;
+   
+    
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 10px;
+    width: 33.333%;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  .center{
+      margin-left: auto;
+      margin-right: auto;
+  }
+  .accordion {
+    max-width: 1400px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    overflow: hidden;
+    font-family: "Quicksand", sans-serif;
+    background: #009578;
+  }
+  
+  .accordion__label,
+  .accordion__content {
+    padding: 14px 20px;
+  }
+  
+  .accordion__label {
+    display: block;
+    color: #ffffff;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    transition: background 0.1s;
+  }
+  
+  .accordion__label:hover {
+    background: rgba(0, 0, 0, 0.1);
+  }
+  
+  .accordion__label::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    width: 12px;
+    height: 6px;
+    background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
+    background-size: contain;
+    transition: transform 0.4s;
+  }
+  
+  .accordion__content {
+    background: #ffffff;
+    line-height: 1.6;
+    font-size: 0.85em;
+    display: none;
+  }
+  
+  .accordion__input {
+    display: none;
+  }
+  
+  .accordion__input:checked ~ .accordion__content {
+    display: block;
+  }
+  
+  .accordion__input:checked ~ .accordion__label::after {
+    transform: translateY(-50%) rotate(0.5turn);
+  }
+
+  .colors{
+    background-color: #D1E0EB;
+    color: #0C3C60;
+    text-align: center;
+    padding: 10px 10px 0px;
+    margin-top: 20px;
+  }
+  
+/* end: about us styles */
+/* start: colors styles */
+/* HIDE RADIO */
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* IMAGE STYLES */
+  [type=radio] + img {
+    cursor: pointer;
+  }
+  
+  /* CHECKED STYLES */
+  [type=radio]:checked + img {
+    outline: 2px solid #f00;
+  }
 /* start: contact us styles */
 .contact-us {
     background-color: #0C3C60;
@@ -242,12 +388,13 @@ nav ul li a {
 .contact-form textarea {
     display: block;
     margin: 0 0 20px;
-    padding: 8px 12px;
+    padding: 8px 2px;
     color: #597DB5;
     font-size: 16px;
     width: 100%;
     border: none;
     box-sizing: border-box;
+    
 }
 
 .contact-form textarea {
