--- a/sports.css
+++ b/sports.css
@@ -281,8 +281,8 @@ nav ul li a {
     width:100%;
     height: 100%;
 }
-#ktm{
-    background: url(images/kavasaki.png)no-repeat;
+#kawasaki{
+    background: url(images/kawasaki.png)no-repeat;
     background-size: contain;
     background-position-y: center;
     width:100%;
