--- a/1250.css
+++ b/1250.css
@@ -99,14 +99,15 @@ nav ul li a {
 /* start: hero section styles */
 .hero-image {
     position: relative;
-    max-height: 850px;
+    max-height: 1250px;
     overflow: hidden;
     margin-bottom: 4px;
+    width: 60%;
 }
 
 .hero-image img {
-    width: 100%;
-    height: 700px;
+    width: 800px;
+    height: 500px;
     
     
 }
